# ferxgui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
design/: ferx-core-issue-categorical-vpc.md  ferx-core-issue-conddist-bundling.md  ferx-core-issue-tte-vpc.md  ferx-gui-peer-feedback-plan.md
src/: app.rs  main.rs  notify.rs  state.rs
src/domain/: eval.rs  fit.rs  mod.rs  model.rs  r_results.rs  run_record.rs  sim_types.rs
src/io/: ferx_file.rs  fitrx.rs  mod.rs  persistence.rs  r_extract.rs
src/ui/: eval_tab.rs  files_tab.rs  history_tab.rs  icons.rs  mod.rs  models_tab.rs  report.rs  sim_tab.rs  simulate_tab.rs  sir_tab.rs  tree_tab.rs  vpc_tab.rs
src/workers/: messages.rs  mod.rs  run.rs  run_manifest.rs  scan.rs
