[package]
name = "ferxgui"
version = "0.9.10"
edition = "2021"
description = "FeRx GUI — desktop application for FeRx NLME modelling"
license = "MIT"

[[bin]]
name = "ferxgui"
path = "src/main.rs"

[dependencies]
# UI
eframe    = { version = "0.31", features = ["default_fonts"] }
egui      = "0.31"
egui_plot   = "0.31"
egui_extras = "0.31"

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ZIP  (.fitrx bundles)
zip = { version = "2", default-features = false, features = ["deflate"] }

# CSV
csv = "1.3"

# Parallel computation (LOESS, quantile ribbons)
rayon = "1.10"

# Native file / folder dialogs
rfd = "0.15"

# Open files / folders in OS default app
open = "5"

# Platform directories  (~/.ferxgui/)
dirs = "5"

# Random  (jitter on Duplicate dialog)
rand = "0.8"

# PNG export (tree + sim plot publication export)
image    = { version = "0.25", default-features = false, features = ["png"] }
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "area_series", "point_series", "ab_glyph"] }

# Error derivation
thiserror = "1"

[profile.release]
lto = "thin"

[dev-dependencies]
egui_kittest = { version = "0.31", default-features = false }
